[package]
name = "xor_linked_list"
description = "A memory-efficient linked list implementation using XOR pointers"
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["xor", "list", "linked", "linked-list"]
repository = "https://github.com/IvanDimovSIT/xor_linked_list"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
serde = ["dep:serde"]
